--- a/.github/workflows/run-notebooks.yml
+++ b/.github/workflows/run-notebooks.yml
@@ -3,7 +3,7 @@ name: Run Jupyter Notebooks
 on:
   push:
     branches:
-      - main  # Run the workflow on pushes to the main branch
+      - main
   pull_request:
 
 jobs:
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.11  # Specify your Python version
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
@@ -25,6 +25,8 @@ jobs:
         pip install notebook nbconvert nbformat
 
     - name: Run Jupyter Notebooks
+      env:  # Add your environment variables here
+        DEVTOAPI: ${{ secrets.DEVTOAPI }}
       run: |
         for notebook in $(find . -name "*.ipynb"); do
           echo "Running $notebook"
